data/derived/comb/progs/unify/prog0283.ml.out
Characters 331-335:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type (int * 'a) list
       but an expression was expected of type (int list * 'b) list
       Type int is not compatible with type int list 
